# ecommerce

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  config.json  docker-compose.yml  docker.env  local.env  pyproject.toml
source/app/: config.py
source/app/adapter/db/: __init__.py  database.py  exception.py  repositories.py  repository.py  sqlalchemy.py
source/app/adapter/db/alembic/: env.py
source/app/adapter/db/alembic/csv/: categories.csv  products.csv
source/app/adapter/db/alembic/versions/: 0bca5407fadc_db_migration.py  566742e54f4e_db_migration.py  7677ae1b0a24_db_migration.py  a72837a5ebad_db_migration.py  ed004e70b96d_db_migration.py
source/app/adapter/db/model/: __init__.py  base.py  cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  user.py
source/app/adapter/fastapi/: crud.py  dependencies.py  exception_handlers.py  main.py
source/app/adapter/fastapi/routes/: api.py  auth.py  cart_item.py  order.py  product.py  user.py
source/app/adapter/token/: __init__.py  jwt_token.py  oauth2.py
source/app/domain/: add_cart.py  base_dto.py  cart_dto.py  cart_item_dto.py  category_dto.py  exception.py  order.py  place_order.py  product_dto.py  user_dto.py  view_cart.py
source/app/ports/db/: __init__.py  adapter.py  repositories.py  repository.py
source/app/ports/security/: token.py
