[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "my ecommerce website"
authors = ["Ankur Shrivastava"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
